--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,11 @@
         "laravel/framework": "^8.12",
         "laravel/jetstream": "^1.6",
         "laravel/sanctum": "^2.6",
+        "laravel/scout": "^8.4",
         "laravel/tinker": "^2.5",
-        "livewire/livewire": "^2.3"
+        "livewire/livewire": "^2.3",
+        "teamtnt/laravel-scout-tntsearch-driver": "^11.1",
+        "teamtnt/tntsearch": "^2.4"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.5",
